; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Mupen64Plus/png/extr_png.c_png_colorspace_set_chromaticities.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Mupen64Plus/png/extr_png.c_png_colorspace_set_chromaticities.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@PNG_COLORSPACE_INVALID = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [23 x i8] c"invalid chromaticities\00", align 1
@.str.1 = private unnamed_addr constant [39 x i8] c"internal error checking chromaticities\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @png_colorspace_set_chromaticities(i32 %0, %struct.TYPE_4__* %1, i32* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_4__*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store %struct.TYPE_4__* %1, %struct.TYPE_4__** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32 %3, i32* %9, align 4
  %11 = load i32*, i32** %8, align 8
  %12 = call i32 @png_colorspace_check_xy(i32* %10, i32* %11)
  switch i32 %12, label %27 [
    i32 0, label %13
    i32 1, label %19
  ]

13:                                               ; preds = %4
  %14 = load i32, i32* %6, align 4
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %16 = load i32*, i32** %8, align 8
  %17 = load i32, i32* %9, align 4
  %18 = call i32 @png_colorspace_set_xy_and_XYZ(i32 %14, %struct.TYPE_4__* %15, i32* %16, i32* %10, i32 %17)
  store i32 %18, i32* %5, align 4
  br label %36

19:                                               ; preds = %4
  %20 = load i32, i32* @PNG_COLORSPACE_INVALID, align 4
  %21 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %22 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = or i32 %23, %20
  store i32 %24, i32* %22, align 4
  %25 = load i32, i32* %6, align 4
  %26 = call i32 @png_benign_error(i32 %25, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0))
  br label %35

27:                                               ; preds = %4
  %28 = load i32, i32* @PNG_COLORSPACE_INVALID, align 4
  %29 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %30 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = or i32 %31, %28
  store i32 %32, i32* %30, align 4
  %33 = load i32, i32* %6, align 4
  %34 = call i32 @png_error(i32 %33, i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str.1, i64 0, i64 0))
  br label %35

35:                                               ; preds = %27, %19
  store i32 0, i32* %5, align 4
  br label %36

36:                                               ; preds = %35, %13
  %37 = load i32, i32* %5, align 4
  ret i32 %37
}

declare dso_local i32 @png_colorspace_check_xy(i32*, i32*) #1

declare dso_local i32 @png_colorspace_set_xy_and_XYZ(i32, %struct.TYPE_4__*, i32*, i32*, i32) #1

declare dso_local i32 @png_benign_error(i32, i8*) #1

declare dso_local i32 @png_error(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
